added the asset folder

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
         <!-- table -->
         <section class="census-table">
-          <table id="tallyTable">
-            <thead>
+          <table id="tallyTable" class="container-sm">
+            <thead class="container-sm">
               <tr>
                 <th>Time slot</th>
                 <th>Buses (≥3500)</th>
